# pMANIC

./: .gitignore  MANIC-mac.spec  MANIC.spec  README.md  changelog_20251218_1401.md  example_compounds_list.xls  main.py  pyproject.toml  requirements.txt  run.sh  style.qss  test.db  tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.zed/: debug.json
docs/: 01_user_guide.md  Reference_Abundance_Calculation.md  Reference_Baseline_Correction.md  Reference_Carbon_Enrichment.md  Reference_Integration_Methods.md  Reference_Label_Incorperation_Carbon_Enrichment.md  Reference_MRRF_Calibration.md  Reference_Mass_Tolerance.md  Reference_Natural_Isotope_Correction.md  Reference_Peak_Validation.md  Workflow_Data_Interpretation.md  Workflow_Isotope_Correct_External_Data.md  Workflow_Process_External_Data.md  Workflow_Updating_Old_Data.md  data_interpretation.md  getting_started.md  integration_methods.md  mass_tolerance.md  mrrf_calculation_differences.md  mrrf_calibration.md  natural_isotope_correction.md  peak_validation.md  sum_vs_lastwins_bug.md  update_old_data.md  user_guide.md
installer/: MANIC.iss
pymanic_env/: pyvenv.cfg
scripts/: build_macos.sh  build_windows.bat  run.sh  tests.sh  update_manic_version.sh
src/manic/: __version__.py  constants.py  main.py  models.py  old_models.py
src/manic/controllers/: load_cdf_data.py  load_compound_list.py  load_eic_data.py
src/manic/data/: cdf_data_object.py  compound_data_object.py  eic_data_object.py  load_cdf_files.py  load_cdfs.py  load_compound_list.py  load_eic_data.py  ms_data_object.py  tic_data_object.py
src/manic/gui/: graph_view.py  (+3 more)
tests/: compound_list.xls  conftest.py  dataintake.ipynb  test_abundance_units.py  test_baseline_correction.py  test_calibration.py  test_carbon_enrichment.py  test_changelog_sections.py  test_data.py  test_data_processing.py  test_edge_cases.py  test_eic_calculator.py  test_eic_correction_manager.py  test_eic_processing.py  test_integration.py  test_internal_standard_metadata.py  test_legacy_compatibility.py  test_legacy_rebuild_parsers.py  test_mathematical_operations.py  test_natural_abundance_correction.py  test_peak_validation_requirements.py  test_relative_abundance.py  test_rt_window_centering.py  test_ui_formatting.py
(+73 files in other folders)
